syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";


service DiscountProtoService{
	
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);

}

// -------------- 1. GetDiscount ----------------------
message GetDiscountRequest{
	string ProductName = 1 ;
}

message CouponModel {
	  int32 Id = 1 ;
      string ProductName = 2 ;
      string Description = 3 ;
      int32 Amount = 4 ;
}

// ------------ 2. CreateDiscount ---------------------
message CreateDiscountRequest {
		CouponModel coupon = 1;
}
// ------------ 3. UpdateDiscount  --------------------
message UpdateDiscountRequest {
		CouponModel coupon = 1;
}
// ----------- 4.  DeleteDiscount  -------------------

message DeleteDiscountResponse{
	bool success = 1;
}
